--- a/ListClients.ui
+++ b/ListClients.ui
@@ -14,7 +14,14 @@
    <string>Список клиентов</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QDialog {
+	background-color: #d3dcf3;
+	background-image: url(:/images/backgroundImage.png)
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
@@ -52,6 +59,9 @@ border-radius: 7px;
          <font>
           <pointsize>10</pointsize>
          </font>
+        </property>
+        <property name="toolTip">
+         <string>Поиск</string>
         </property>
         <property name="styleSheet">
          <string notr="true">QLineEdit {
@@ -236,6 +246,9 @@ QPushButton:pressed {
           <height>33</height>
          </size>
         </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
      </layout>
@@ -247,6 +260,7 @@ QPushButton:pressed {
   <tabstop>searchComboBox</tabstop>
   <tabstop>clientSearch</tabstop>
   <tabstop>addClientButton</tabstop>
+  <tabstop>csvExportButton</tabstop>
   <tabstop>updateButton</tabstop>
   <tabstop>tableView</tabstop>
  </tabstops>
