--- a/AddEmployee.ui
+++ b/AddEmployee.ui
@@ -17,6 +17,15 @@
    <iconset resource="images.qrc">
     <normaloff>:/images/autoService-logo.png</normaloff>:/images/autoService-logo.png</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="1">
     <spacer name="horizontalSpacer_2">
@@ -228,6 +237,13 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>workerFMLname</tabstop>
+  <tabstop>workerPosition</tabstop>
+  <tabstop>hourlyPayment</tabstop>
+  <tabstop>serviceAddress</tabstop>
+  <tabstop>saveWorkerButton</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
