--- a/AddTask.ui
+++ b/AddTask.ui
@@ -13,6 +13,15 @@
   <property name="windowTitle">
    <string>Добавление задания</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
@@ -242,6 +251,12 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>dateLine</tabstop>
+  <tabstop>timeLine</tabstop>
+  <tabstop>contentLine</tabstop>
+  <tabstop>createTaskButton</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
