--- a/UpdateEmployee.ui
+++ b/UpdateEmployee.ui
@@ -13,6 +13,15 @@
   <property name="windowTitle">
    <string>Редактирование информации о сотруднике</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QPushButton" name="backToViewInfoButton">
@@ -281,6 +290,14 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>workerFMLname</tabstop>
+  <tabstop>workerPosition</tabstop>
+  <tabstop>hourlyPayment</tabstop>
+  <tabstop>serviceNumber</tabstop>
+  <tabstop>saveUpdatedInfo</tabstop>
+  <tabstop>backToViewInfoButton</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
