--- a/UpdateSparePart.ui
+++ b/UpdateSparePart.ui
@@ -13,6 +13,15 @@
   <property name="windowTitle">
    <string>Редактирование информации о запчасти</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="4" column="0">
     <widget class="QLabel" name="errorLabel">
@@ -327,6 +336,16 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>sparePartNameLine</tabstop>
+  <tabstop>manufacturerLine</tabstop>
+  <tabstop>quantityInStockLine</tabstop>
+  <tabstop>autoCompatibilityLine</tabstop>
+  <tabstop>isOriginalLine</tabstop>
+  <tabstop>priceLine</tabstop>
+  <tabstop>saveUpdatedInfo</tabstop>
+  <tabstop>backToViewInfoButton</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
