--- a/ViewClient.ui
+++ b/ViewClient.ui
@@ -19,6 +19,19 @@
   <property name="windowTitle">
    <string>Информация о клиенте</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QWidget {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_5">
    <property name="leftMargin">
     <number>5</number>
@@ -538,6 +551,21 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>createOrderByClientButton</tabstop>
+  <tabstop>updateClientInfoButton</tabstop>
+  <tabstop>clientTypeLine</tabstop>
+  <tabstop>clientFMLname</tabstop>
+  <tabstop>contacts</tabstop>
+  <tabstop>email</tabstop>
+  <tabstop>autoBrand</tabstop>
+  <tabstop>autoModel</tabstop>
+  <tabstop>manufactureYear</tabstop>
+  <tabstop>autoLicensePlate</tabstop>
+  <tabstop>VINnumber</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>tableView</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
