--- a/ViewSparePart.ui
+++ b/ViewSparePart.ui
@@ -13,6 +13,15 @@
   <property name="windowTitle">
    <string>Информация о запчасти</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog {
+	background-color: #f7f9ff;
+}
+
+QMessageBox {
+	background-color: white;
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="1">
     <widget class="QPushButton" name="updateSparePartInfoButton">
@@ -270,6 +279,15 @@ QPushButton:pressed {
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>updateSparePartInfoButton</tabstop>
+  <tabstop>sparePartNameLine</tabstop>
+  <tabstop>manufacturerLine</tabstop>
+  <tabstop>quantityInStockLine</tabstop>
+  <tabstop>autoCompatibilityLine</tabstop>
+  <tabstop>isOriginalLine</tabstop>
+  <tabstop>priceLine</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
