--- a/AnalyticsDialog.ui
+++ b/AnalyticsDialog.ui
@@ -6,16 +6,33 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>766</width>
-    <height>482</height>
+    <width>1920</width>
+    <height>1060</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Аналитика</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout"/>
+    <widget class="QFrame" name="horizontalFrame">
+     <layout class="QHBoxLayout" name="horizontalLayout"/>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QFrame" name="horizontalFrame2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QFrame" name="horizontalFrame3">
+     <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QFrame" name="horizontalFrame4">
+     <layout class="QHBoxLayout" name="horizontalLayout_4"/>
+    </widget>
    </item>
   </layout>
  </widget>
