--- a/SettingsWindow.ui
+++ b/SettingsWindow.ui
@@ -247,7 +247,7 @@ QMessageBox {
         </layout>
        </widget>
       </item>
-      <item row="4" column="0" colspan="2">
+      <item row="4" column="0">
        <widget class="QLineEdit" name="userPosition">
         <property name="font">
          <font>
@@ -299,6 +299,9 @@ QMessageBox {
     background-color: #dbdcf7;
 	padding-left: 6px;
 }</string>
+       </property>
+       <property name="currentIndex">
+        <number>-1</number>
        </property>
       </widget>
      </item>
