--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -933,6 +933,9 @@ border: none;
            </property>
            <item>
             <widget class="QPushButton" name="accountLogIn">
+             <property name="focusPolicy">
+              <enum>Qt::NoFocus</enum>
+             </property>
              <property name="styleSheet">
               <string notr="true">QPushButton {
 	border: 0px;
@@ -952,27 +955,21 @@ border: none;
                <height>60</height>
               </size>
              </property>
+             <property name="autoDefault">
+              <bool>false</bool>
+             </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="nameLine">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
+            <widget class="QLabel" name="nameLabel">
              <property name="font">
               <font>
                <family>Georgia</family>
                <pointsize>9</pointsize>
               </font>
              </property>
-             <property name="layoutDirection">
-              <enum>Qt::LeftToRight</enum>
-             </property>
              <property name="styleSheet">
-              <string notr="true">QLineEdit {
+              <string notr="true">QLabel {
 	border: 0px;
 	background-color: transparent;
 }</string>
@@ -992,6 +989,9 @@ border: none;
                <family>Georgia</family>
                <pointsize>9</pointsize>
               </font>
+             </property>
+             <property name="cursor">
+              <cursorShape>IBeamCursor</cursorShape>
              </property>
              <property name="styleSheet">
               <string notr="true">QLabel {
@@ -1138,7 +1138,7 @@ border: none;
 }</string>
           </property>
           <property name="text">
-           <string>Архитекторская, 28 (Киевский р-н) - (050)-505-5050</string>
+           <string notr="true">Архитекторская, 28 (Киевский р-н) - (050)-505-5050</string>
           </property>
          </widget>
         </item>
@@ -1157,7 +1157,7 @@ border: none;
 }</string>
           </property>
           <property name="text">
-           <string>Платонова, 56 (Малиновский р-н) - (050)-500-0055</string>
+           <string notr="true">Платонова, 56 (Малиновский р-н) - (050)-500-0055</string>
           </property>
          </widget>
         </item>
@@ -1176,7 +1176,7 @@ border: none;
 }</string>
           </property>
           <property name="text">
-           <string>Среднефонтанская, 30А (Приморский р-н) - (050)-050-0505</string>
+           <string notr="true">Среднефонтанская, 30А (Приморский р-н) - (050)-050-0505</string>
           </property>
          </widget>
         </item>
